backend/tests/snapshots/snapshots__snapshot_amputeestore_false_positive_short_circuits.snap
---
source: tests/snapshots.rs
expression: link
---
{
  "amp_canonical": null,
  "canonical": null,
  "canonicals": [],
  "origin": {
    "domain": null,
    "is_amp": false,
    "is_cached": null,
    "is_valid": true,
    "url": "https://amputeestore.com/products/tamarack-glidewear-prosthetic-liner-patch"
  }
}
