backend/tests/snapshots/snapshots__snapshot_depth_recursion_through_amp_chain.snap
---
source: tests/snapshots.rs
expression: link
---
{
  "amp_canonical": null,
  "canonical": {
    "domain": "example",
    "is_alt": false,
    "is_amp": false,
    "is_cached": null,
    "is_valid": true,
    "type": "REL",
    "url": "https://example.eu/article/",
    "url_similarity": 0.6835443037974683
  },
  "canonicals": [
    {
      "domain": "example",
      "is_alt": false,
      "is_amp": true,
      "is_cached": false,
      "is_valid": true,
      "type": "REL",
      "url": "https://example.eu/article/amp/",
      "url_similarity": 0.7469879518072289
    },
    {
      "domain": "example",
      "is_alt": false,
      "is_amp": false,
      "is_cached": null,
      "is_valid": true,
      "type": "REL",
      "url": "https://example.eu/article/",
      "url_similarity": 0.6835443037974683
    }
  ],
  "origin": {
    "domain": "google",
    "is_amp": true,
    "is_cached": true,
    "is_valid": true,
    "url": "https://www.google.com/amp/s/example.eu/article/amp/"
  }
}
