backend/tests/snapshots/snapshots__snapshot_fetch_failure_returns_empty_link.snap
---
source: tests/snapshots.rs
expression: link
---
{
  "amp_canonical": null,
  "canonical": null,
  "canonicals": [],
  "origin": {
    "domain": "google",
    "is_amp": true,
    "is_cached": true,
    "is_valid": true,
    "url": "https://www.google.com/amp/s/example.eu/article"
  }
}
