backend/tests/snapshots/snapshots__snapshot_multiple_canonical_signals_sorted_by_similarity.snap
---
source: tests/snapshots.rs
expression: link
---
{
  "amp_canonical": null,
  "canonical": {
    "domain": "example",
    "is_alt": false,
    "is_amp": false,
    "is_cached": null,
    "is_valid": true,
    "type": "REL",
    "url": "https://example.eu/article-2024-tesla",
    "url_similarity": 0.7789473684210526
  },
  "canonicals": [
    {
      "domain": "example",
      "is_alt": false,
      "is_amp": false,
      "is_cached": null,
      "is_valid": true,
      "type": "REL",
      "url": "https://example.eu/article-2024-tesla",
      "url_similarity": 0.7789473684210526
    },
    {
      "domain": "example",
      "is_alt": false,
      "is_amp": false,
      "is_cached": null,
      "is_valid": true,
      "type": "OG_URL",
      "url": "https://example.eu/totally-different-path",
      "url_similarity": 0.4444444444444444
    }
  ],
  "origin": {
    "domain": "google",
    "is_amp": true,
    "is_cached": true,
    "is_valid": true,
    "url": "https://www.google.com/amp/s/example.eu/article-2024-tesla"
  }
}
