backend/tests/snapshots/snapshots__snapshot_non_amp_origin_returns_empty_link.snap
---
source: tests/snapshots.rs
expression: link
---
{
  "amp_canonical": null,
  "canonical": null,
  "canonicals": [],
  "origin": {
    "domain": null,
    "is_amp": false,
    "is_cached": null,
    "is_valid": true,
    "url": "https://news.ycombinator.com/item?id=42"
  }
}
