backend/tests/snapshots/snapshots__snapshot_og_url_canonical.snap
---
source: tests/snapshots.rs
expression: link
---
{
  "amp_canonical": null,
  "canonical": {
    "domain": "example",
    "is_alt": false,
    "is_amp": false,
    "is_cached": null,
    "is_valid": true,
    "type": "OG_URL",
    "url": "https://example.com/post-42",
    "url_similarity": 0.9310344827586207
  },
  "canonicals": [
    {
      "domain": "example",
      "is_alt": false,
      "is_amp": false,
      "is_cached": null,
      "is_valid": true,
      "type": "OG_URL",
      "url": "https://example.com/post-42",
      "url_similarity": 0.9310344827586207
    }
  ],
  "origin": {
    "domain": "example",
    "is_amp": true,
    "is_cached": false,
    "is_valid": true,
    "url": "https://amp.example.com/post-42"
  }
}
