backend/tests/snapshots/snapshots__snapshot_rel_canonical.snap
---
source: tests/snapshots.rs
expression: link
---
{
  "amp_canonical": null,
  "canonical": {
    "domain": "example",
    "is_alt": false,
    "is_amp": false,
    "is_cached": null,
    "is_valid": true,
    "type": "REL",
    "url": "https://example.eu/article",
    "url_similarity": 0.7123287671232876
  },
  "canonicals": [
    {
      "domain": "example",
      "is_alt": false,
      "is_amp": false,
      "is_cached": null,
      "is_valid": true,
      "type": "REL",
      "url": "https://example.eu/article",
      "url_similarity": 0.7123287671232876
    }
  ],
  "origin": {
    "domain": "google",
    "is_amp": true,
    "is_cached": true,
    "is_valid": true,
    "url": "https://www.google.com/amp/s/example.eu/article"
  }
}
