backend/tests/snapshots/snapshots__snapshot_schema_mainentity_canonical.snap
---
source: tests/snapshots.rs
expression: link
---
{
  "amp_canonical": null,
  "canonical": {
    "domain": "example",
    "is_alt": false,
    "is_amp": false,
    "is_cached": null,
    "is_valid": true,
    "type": "SCHEMA_MAINENTITY",
    "url": "https://example.eu/news/story",
    "url_similarity": 0.9354838709677419
  },
  "canonicals": [
    {
      "domain": "example",
      "is_alt": false,
      "is_amp": false,
      "is_cached": null,
      "is_valid": true,
      "type": "SCHEMA_MAINENTITY",
      "url": "https://example.eu/news/story",
      "url_similarity": 0.9354838709677419
    }
  ],
  "origin": {
    "domain": "example",
    "is_amp": true,
    "is_cached": false,
    "is_valid": true,
    "url": "https://amp.example.eu/news/story"
  }
}
